LLM/LiteLLM/kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: {gateway_name}
  namespace: {namespace}
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - {litellm_host_name}
    port:
      name: http
      number: 80
      protocol: HTTP
